# ZamVoice

./: .gitignore  README.md  pubspec.yaml  pubspec.yaml.bak
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/buumba/nyanjatoenglish/: MainActivity.kt
android/whisper_ffi/: build.gradle
android/whisper_ffi/src/main/cpp/: Android.mk  whisper_ffi.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/app/: app.dart
lib/src/audio/: audio_format_converter.dart  audio_metadata_reader.dart  audio_recorder.dart  audio_uploader.dart  wav_reader.dart
lib/src/core/: constants.dart
lib/src/inference/: hallucination_filter.dart  model_path_resolver.dart  whisper_ffi_bindings.dart  whisper_ffi_service.dart  whisper_service.dart  whisper_stub_service.dart
lib/src/models/: chat_message.dart
lib/src/orchestration/: whisper_queue.dart  whisper_task.dart
lib/src/presentation/screens/: chat_screen.dart  home_screen.dart  splash_screen.dart  tts_settings_screen.dart
lib/src/presentation/widgets/: chat_bubble.dart  recording_fab.dart  recording_indicator.dart
lib/src/state/: app_controller.dart  app_state.dart  app_state_provider.dart  app_ui_state.dart  tts_settings_controller.dart  tts_settings_state.dart
lib/src/storage/: secure_storage_service.dart
lib/src/tts/: elevenlabs_service.dart
lib/src/validation/: audio_validation_result.dart  audio_validator.dart
native/: CMakeLists.txt  whisper_bridge.c
scripts/: build_whisper.sh
test/: widget_test.dart
